# EncryptorProyect

./: .env  .gitignore  1.txt  4.txt  5.txt  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  decifrado.txt  encryptor  prettier.config.js  text.txt
data/: 5-desifrado.txt  5.txt  ciphertext.txt  text.txt
include/: colors.hpp  directories.hpp  encryption.hpp  file_utils.hpp  key_derivation.hpp  menu.hpp  mysql_utils.hpp  openssl_utils.hpp  password_prompt.hpp  time_utils.hpp
include/keys/: key_encryption.hpp  key_menu.hpp
src/: colors.cpp  directories.cpp  encryption.cpp  file_utils.cpp  key_derivation.cpp  main.cpp  menu.cpp  mysql_utils.cpp  openssl_utils.cpp  password_prompt.cpp  time_utils.cpp
src/keys/: key_encryption.cpp  key_menu.cpp
